[package]
name = "api-fs"
version = "0.1.0"
authors = ["Ben Goldberg <benjamin.goldberg@enel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
env_logger = "0.6.2"
log = "0.4.7"
time = "0.1.42"
libc = "0.2.60"
