[package]
name = "api-fs"
version = "0.1.0"
authors = ["Ben Goldberg <benjamin.goldberg@enel.com>"]
edition = "2018"

[lib]
name = "apifs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
env_logger = "0.6"
log = "0.4"
time = "0.1"
libc = "0.2"
futures = "0.1"
reqwest = "0.9"