[package]
name = "api-fs"
version = "0.1.0"
authors = ["Ben Goldberg <jediben97@gmail.com>"]
edition = "2018"

[lib]
name = "apifs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
env_logger = "0.6"
log = "0.4"
time = "0.1"
libc = "0.2"
futures = "0.1"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
failure = "0.1"
actix = "0.8"
bytebuffer = "0.2"
try_future = "0.1"